<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}"
    android:background="@color/sky_blue">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/app_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="32sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:layout_below="@+id/ic">
        <Button
            android:id="@+id/my_favorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_black"
            android:drawableLeft="@drawable/favorite_"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/my_favorite"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:hapticFeedbackEnabled="true"
            android:onClick="openFavorites"/>
        <Button
            android:id="@+id/bar_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_black"
            android:drawableLeft="@drawable/beer"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/bar_1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:hapticFeedbackEnabled="true"
            android:onClick="openBar1"/>
        <Button
            android:id="@+id/bar_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_black"
            android:drawableLeft="@drawable/beer"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/bar_2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:hapticFeedbackEnabled="true"
            android:onClick="openBar2"/>
        <Button
            android:id="@+id/bar_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_black"
            android:drawableLeft="@drawable/beer"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/bar_3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:hapticFeedbackEnabled="true"
            android:onClick="openBar3"/>
        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>
    </LinearLayout>

</RelativeLayout>
